fix(UI): add imporovements
- Increase the space below the logo
- fix the overlap of the main area over the image is inconsistent/different on different pages
- move date below the event name
- fix contrast for add to cart button

--- a/app/eventyay/static/cfp/css/_layout.css
+++ b/app/eventyay/static/cfp/css/_layout.css
@@ -8,7 +8,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 270px;
+  height: 320px;
   z-index: -1;
   display: flex;
 
@@ -161,7 +161,7 @@ header {
 .event-hero {
   display: flex;
   align-items: center;
-  margin: 1rem 0 1.2rem;
+  margin: 1rem 0 3.5rem;
 }
 
 .event-brand {
